force-app/main/default/objects/User/fields/ELT_Lead__c.field-meta.xml
<CustomField>
    <fullName>ELT_Lead__c</fullName>
    <inlineHelpText>Executive Leadership Team lead for this person, from Workday. Maintained by the Workday HR sync. Change it in Workday; manual edits are overwritten on the next run.</inlineHelpText>
    <label>ELT Lead</label>
    <relationshipLabel>ELT Lead of</relationshipLabel>
    <relationshipName>ELT_Lead_Of</relationshipName>
    <type>Hierarchy</type>
</CustomField>