force-app/main/default/objects/User/fields/Employee_Type__c.field-meta.xml
<CustomField>
    <fullName>Employee_Type__c</fullName>
    <inlineHelpText>Maintained by the Workday HR sync. Change it in Workday; manual edits are overwritten on the next run.</inlineHelpText>
    <label>Employee Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Permanent</fullName>
            </value>
            <value>
                <fullName>EOR</fullName>
            </value>
            <value>
                <fullName>Fixed Term</fullName>
            </value>
            <value>
                <fullName>Casual</fullName>
            </value>
            <value>
                <fullName>NED</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>