force-app/main/default/objects/User/fields/Hire_Date__c.field-meta.xml
<CustomField>
    <fullName>Hire_Date__c</fullName>
    <inlineHelpText>Maintained by the Workday HR sync. Change it in Workday; manual edits are overwritten on the next run.</inlineHelpText>
    <label>Hire Date</label>
    <type>Date</type>
</CustomField>