force-app/main/default/objects/User/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <inlineHelpText>Maintained by the Workday HR sync. Change it in Workday; manual edits are overwritten on the next run.</inlineHelpText>
    <label>Location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>London</fullName>
            </value>
            <value>
                <fullName>Remote US</fullName>
            </value>
            <value>
                <fullName>Remote UK (35)</fullName>
            </value>
            <value>
                <fullName>New York</fullName>
            </value>
            <value>
                <fullName>Hong Kong</fullName>
            </value>
            <value>
                <fullName>Remote UK (37)</fullName>
            </value>
            <value>
                <fullName>London (35)</fullName>
            </value>
            <value>
                <fullName>Philadelphia, PA</fullName>
            </value>
            <value>
                <fullName>New York (Union Only)</fullName>
            </value>
            <value>
                <fullName>Erlanger, KY</fullName>
            </value>
            <value>
                <fullName>Texas Office Cedar Park</fullName>
            </value>
            <value>
                <fullName>Spain</fullName>
            </value>
            <value>
                <fullName>Manchester</fullName>
            </value>
            <value>
                <fullName>Washington D.C.</fullName>
            </value>
            <value>
                <fullName>Texas Office Abilene</fullName>
            </value>
            <value>
                <fullName>Australia</fullName>
            </value>
            <value>
                <fullName>Belgium</fullName>
            </value>
            <value>
                <fullName>Sweden</fullName>
            </value>
            <value>
                <fullName>Italy</fullName>
            </value>
            <value>
                <fullName>Romania</fullName>
            </value>
            <value>
                <fullName>Singapore</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>