force-app/main/default/objects/User/fields/Sub_Division__c.field-meta.xml
<CustomField>
    <fullName>Sub_Division__c</fullName>
    <inlineHelpText>Maintained by the Workday HR sync. Change it in Workday; manual edits are overwritten on the next run.</inlineHelpText>
    <label>Sub Division</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Editorial</fullName>
            </value>
            <value>
                <fullName>Intelligence</fullName>
            </value>
            <value>
                <fullName>Events</fullName>
            </value>
            <value>
                <fullName>Professional Development</fullName>
            </value>
            <value>
                <fullName>DIU</fullName>
            </value>
            <value>
                <fullName>Software Development</fullName>
            </value>
            <value>
                <fullName>Customer Excellence</fullName>
            </value>
            <value>
                <fullName>Finance</fullName>
            </value>
            <value>
                <fullName>Contributed Content</fullName>
            </value>
            <value>
                <fullName>Financial Control</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Program-Project</fullName>
            </value>
            <value>
                <fullName>Product Management</fullName>
            </value>
            <value>
                <fullName>Operations People &amp; Culture</fullName>
            </value>
            <value>
                <fullName>Marketing Services</fullName>
            </value>
            <value>
                <fullName>IT Operations</fullName>
            </value>
            <value>
                <fullName>Labs-Innovation</fullName>
            </value>
            <value>
                <fullName>Data and CRM</fullName>
            </value>
            <value>
                <fullName>Production Ops</fullName>
            </value>
            <value>
                <fullName>Revenue Operations</fullName>
            </value>
            <value>
                <fullName>Corporate Executive</fullName>
            </value>
            <value>
                <fullName>Executive Office</fullName>
            </value>
            <value>
                <fullName>Content Operations</fullName>
            </value>
            <value>
                <fullName>Facilities</fullName>
            </value>
            <value>
                <fullName>Legal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>