force-app/main/default/objects/User/fields/Workday_Division__c.field-meta.xml
<CustomField>
    <fullName>Workday_Division__c</fullName>
    <inlineHelpText>Division as recorded in Workday (nine values). Not the same as the standard Division field, which the CRM team maintains. Maintained by the Workday HR sync. Change it in Workday; manual edits are overwritten on the next run.</inlineHelpText>
    <label>Workday Division</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Commercial</fullName>
            </value>
            <value>
                <fullName>Content and Editorial</fullName>
            </value>
            <value>
                <fullName>Product &amp; Technology</fullName>
            </value>
            <value>
                <fullName>Operations Finance</fullName>
            </value>
            <value>
                <fullName>Corporate Strategy</fullName>
            </value>
            <value>
                <fullName>Operations</fullName>
            </value>
            <value>
                <fullName>Operations People &amp; Culture</fullName>
            </value>
            <value>
                <fullName>Corporate Executive</fullName>
            </value>
            <value>
                <fullName>Executive Office</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>