force-app/main/default/objects/User/fields/Workday_Employee_ID__c.field-meta.xml
<CustomField>
    <fullName>Workday_Employee_ID__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>Workday Employee ID, verbatim (numeric or prefixed, e.g. HK578). Maintained by the Workday HR sync. Change it in Workday; manual edits are overwritten on the next run.</inlineHelpText>
    <label>Workday Employee ID</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>