force-app/main/default/objects/User/fields/Workday_Last_Sync__c.field-meta.xml
<CustomField>
    <fullName>Workday_Last_Sync__c</fullName>
    <inlineHelpText>When the Workday HR sync last wrote this record.</inlineHelpText>
    <label>Workday Last Sync</label>
    <type>DateTime</type>
</CustomField>